# rust_ggen2

./: .gitignore  Cargo.toml  README.md
old_cpp/: GraphVectorSpace.hh  OrdinaryGC.hh  PreOrdinaryGC.hh  helpers.hh  make_basis.cpp  make_graphlist.cpp  mygraphs.hh
src/: bliss_interface.rs  densegraph.rs  gc_graph.rs  graphs.rs  helpers.rs  kneissler.rs  main.rs  nauty_interface.rs  nauty_interface2.rs
