[package]
name = "rust_ggen2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.57"
graph6-rs = "0.2.1"
hashbrown = "0.16.1"
indicatif = {version = "0.18.3", features = ["rayon"]}
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
zeroize = "1.8.2"
zstd = { version = "0.13.3", features = ["zstdmt"] }
